fixed export of opengv_LIBRARIES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,7 +206,7 @@ target_link_libraries( test_point_cloud_sac opengv random_generators )
 
 # Create the opengvConfig.cmake file for other cmake projects.
 get_target_property(FULL_LIBRARY_NAME ${PROJECT_NAME} LOCATION)
-set(opengv_LIBRARIES opengv)
+set(opengv_LIBRARIES ${FULL_LIBRARY_NAME})
 set(opengv_LIBRARY_DIR ${PROJECT_BINARY_DIR} )
 set(opengv_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/opengvConfig.cmake.in
